<resources>
    <string name="app_name" translatable="false">Tom\'s Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Full name (username)</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Activities</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name_required">Name required</string>
    <string name="birth_date">Birth date</string>
    <string name="user_registration_successful">User registration is successful!</string>
    <string name="user_registration_failure">Failed to register! Try again!</string>
    <string name="registration_in_progress">Registration is in progress. Please, wait…</string>
    <string name="registration_email_required">Email is required!</string>
    <string name="registration_valid_email">Please, provide valid email!</string>
    <string name="registration_password_required">Password is required!</string>
    <string name="registration_password_length">Minimum 6 characters!</string>
    <string name="registration_name_required">Name is required!</string>
    <string name="registration_birth_date_required">Birth date is required!</string>
    <string name="user_login_failure">Failed to login! Please check credentials and Internet connection!</string>
    <string name="email_verification">Check your email to verify your account!</string>
    <string name="login_went_wrong">Something went wrong. Please, try again!</string>
    <string name="login_in_progress">Login is in progress. Please, wait…</string>
    <string name="login_email_required">Email is required!</string>
    <string name="login_valid_email">Please, provide valid email!</string>
    <string name="login_password_required">Password is required!</string>
    <string name="login_password_length">Minimum 6 characters!</string>
    <string name="logout">Logout</string>
    <string name="send_email">Send email</string>
    <string name="email_sending_in_progress">Email sending is in progress. Please, wait…</string>
    <string name="email_sending_fail">Something went wrong. Please, try again!</string>
    <string name="email_sending_successful">Check your email to reset your password!</string>
    <string name="forgot_password_email_required">Email is required!</string>
    <string name="forgot_password_valid_email">Please, provide valid email!</string>
    <string name="account_email">Email</string>
    <string name="account_birth_date">Birth date</string>
    <string name="account_age_group">Age group</string>
    <string name="account_user_name">Name</string>
    <string name="account_gender">Gender</string>
    <string name="contact">Contact</string>
    <string name="contact_email" translatable="false">tomsschedule.app@gmail.com</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="account_edit">Edit</string>
    <string name="edit_name">Name</string>
    <string name="edit_birth_date">Birth date</string>
    <string name="edit_gender">Gender</string>
    <string name="password_warning">If you want to change your password, please, click on Forgot password during login.</string>
    <string name="edit_account_button">Save</string>
    <string name="edit_was_successful">Update user data is finished!</string>
    <string name="edit_was_fail">Fail! Check your Internet connection and try again editing account!</string>
    <string name="label_edit_account">Edit user data</string>
    <string name="select_color_for_activity">Select color</string>
    <string name="error_saving_no_user">Error in saving activity, no user detected! Please, try to login again!</string>
    <string name="new_activity_name_is_required">Name is required!</string>
    <string name="new_act_start_day_required">Start day is required for interval option!</string>
    <string name="new_act_end_day_required">End day is required for interval option!</string>
    <string name="new_act_must_add_time">You must add days, hours and minutes!</string>
    <string name="new_act_must_add_time_for_a_day">Setting hours and minutes is required!</string>
    <string name="new_act_format_add_time"><![CDATA[Hours must be whole number between 0–23, minutes 0–59 and days >=0!]]></string>
    <string name="new_act_format_add_time_for_a_day">Hours must be whole number between 0–23 and minutes 0–59!</string>
    <string name="new_act_must_set_one_day">You must set at least one day!</string>
    <string name="new_act_must_choose_reg_type">You must choose regularity type for regular activity!</string>
    <string name="new_act_must_choose_type">You must choose type of activity!</string>
    <string name="new_act_must_add_end_date">End date is required!</string>
    <string name="new_act_end_date_error">End date must not be before today!</string>
    <string name="new_act_interval_date_error">Start day must not be after end day!</string>
    <string name="add_new_activity_fragment_label">Add new activity</string>
    <string name="color_pick">Choose a color</string>
    <string name="priority">Priority (1–10)</string>
    <string name="priority_detail">Priority</string>
    <string name="has_deadline">It has just a deadline</string>
    <string name="regularity">Regular activity</string>
    <string name="regularity_detail">Regularity</string>
    <string name="just_interval">An interval or a deadline</string>
    <string name="just_time_measure">Neither of them (e.g. hobby)</string>
    <string name="dates_type">Select the regularity type</string>
    <string name="deadline">Deadline</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="weekly_days">Select days of week</string>
    <string name="custom_interval_from">Start of interval</string>
    <string name="custom_interval_to">End of interval</string>
    <string name="is_time_measured">Has a duration?</string>
    <string name="start_day">Start day</string>
    <string name="end_day">End day</string>
    <string name="has_an_end_date">Has an end date?</string>
    <string name="end_date">End date</string>
    <string name="sum_time">One (long) duration for all days</string>
    <string name="simple_time">The same duration for each day</string>
    <string name="custom_time">Different duration for each day</string>
    <string name="is_weekly_time">The same duration for each week</string>
    <string name="has_fixed_days">Has fixed days in every week?</string>
    <string name="select_fixed_days_times">Set the times for each day</string>
    <string name="activity_name">Activity name</string>
    <string name="name_of_activity">Name</string>
    <string name="color">Color</string>
    <string name="note">Note (optional)</string>
    <string name="note_detail">Note</string>
    <string name="select_color">Select color</string>
    <string name="add_custom_name">Do you want to add custom activity?</string>
    <string name="fix_activities">No, I want global statistics</string>
    <string name="custom_activity">Yes</string>
    <string name="notification_type">Select notification type</string>
    <string name="days">Days (>=0)</string>
    <string name="hours">Hours (0–23)</string>
    <string name="minutes">Minutes (0–59)</string>
    <string name="days_hint">Days</string>
    <string name="hours_hint">Hours</string>
    <string name="minutes_hint">Minutes</string>
    <string name="choose_one_weekly_time">Set how much time you want weekly</string>
    <string name="choose_sum_time_for_deadline">Set how much time you want till deadline</string>
    <string name="choose_sum_time_for_neither">Set how much time you want altogether</string>
    <string name="choose_monthly_time">Set how much time you want monthly</string>
    <string name="choose_sum_time_for_interval">Set how much time you want till end day</string>
    <string name="choose_sum_time_for_fixed_week_days">Set how much time you want till end date</string>
    <string name="choose_daily_time_for_interval">Set how much time you want daily till end day</string>
    <string name="choose_daily_time">Set how much time you want daily</string>
    <string name="edit_act_no_act">I can\'t find this activity!</string>
    <string name="edit_act_name_required">Name is required!</string>
    <string name="edit_act_start_day_required">Start day is required for interval option!</string>
    <string name="edit_act_end_day_required">End day is required for interval option!</string>
    <string name="edit_act_must_add_time">You must add days, hours and minutes!</string>
    <string name="edit_act_must_add_time_for_a_day">Setting hours and minutes is required!</string>
    <string name="edit_act_format_add_time"><![CDATA[Hours must be whole number between 0–23, minutes 0–59 and days >=0!]]></string>
    <string name="edit_act_format_add_time_for_a_day">Hours must be whole number between 0–23 and minutes 0–59!</string>
    <string name="edit_act_must_set_one_day">You must set at least one day!</string>
    <string name="edit_act_must_choose_reg_type">You must choose regularity type for regular activity!</string>
    <string name="edit_act_must_choose_type">You must choose type of activity!</string>
    <string name="edit_act_must_add_end_date">End date is required!</string>
    <string name="edit_act_end_date_error">End date must not be before today!</string>
    <string name="edit_act_interval_date_error">Start day must not be after end day!</string>
    <string name="global_activity_name_immutable">Activity name (global activity names are immutable)</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="select_time_period_chip">Select time period</string>
    <string name="today_chip">Today</string>
    <string name="yesterday_chip">Yesterday</string>
    <string name="three_days_chip">Last 3 days</string>
    <string name="week_chip">Last week</string>
    <string name="two_week_chip">Last 2 weeks</string>
    <string name="month_chip">Last month</string>
    <string name="three_months_chip">Last 3 months</string>
    <string name="all_time_chip">All</string>
    <string name="all_activity_chip">All</string>
    <string name="select_activity_chip">Select one or more activity</string>
    <string name="select_custom_day">Custom day</string>
    <string name="date_hint">Date</string>
    <string name="filter">Filter</string>
    <string name="select_activity">Select activity</string>
    <string name="select_gender">Select gender</string>
    <string name="select_age_group">Select age group</string>
    <string name="age_group_1" translatable="false">\u003C 20</string>
    <string name="age_group_2" translatable="false">20 – 29</string>
    <string name="age_group_3" translatable="false">30 – 39</string>
    <string name="age_group_4" translatable="false">40 – 49</string>
    <string name="age_group_5" translatable="false">50 – 59</string>
    <string name="age_group_6" translatable="false">\u003E 60</string>
    <string name="both">Both</string>
    <string name="all_age_group_chip">All</string>
    <string name="user_name">Name</string>
</resources>