<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_time_period_chip"
                android:textSize="16sp"
                android:textStyle="italic" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:checkedChip="@id/chip4"
                android:paddingTop="16dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yesterday_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_days_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/week_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_week_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_months_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_time_chip" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/select_activity_chip"
                android:textSize="16sp"
                android:textStyle="italic" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_activity_chip" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>