<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="hu.janny.tomsschedule.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="hu.janny.tomsschedule.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="hu.janny.tomsschedule.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_account"
        android:name="hu.janny.tomsschedule.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>