<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.statistics.GlobalFilterFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/gSelectActivityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_activity"
                android:textSize="16sp"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/gSelectActivitySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/fixActivities"
                android:minHeight="48dp"
                android:spinnerMode="dialog"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/gSelectPeriodText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_time_period_chip"
                android:textSize="16sp"
                android:textStyle="italic" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/gPeriodChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:checkedChip="@id/gWeekChip"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/gYesterdayChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yesterday_chip"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gWeekChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/week_chip"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gMonthChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month_chip"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gCustomDayChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_custom_day"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />
            </com.google.android.material.chip.ChipGroup>

            <EditText
                android:id="@+id/gCustomDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date_hint"
                android:minHeight="48dp"
                android:paddingTop="16dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/gGenderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_gender"
                android:textSize="16sp"
                android:textStyle="italic" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/gGenderChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:checkedChip="@id/gBothGenderChip"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/gBothGenderChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gFemaleChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gMaleChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/pAgeGroupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_age_group"
                android:textSize="16sp"
                android:textStyle="italic" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/pAgeGroupChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:checkedChip="@id/gAgeGroupAllChip"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/gAgeGroupAllChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_age_group_chip"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gAgeGroup1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_group_1"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gAgeGroup2"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_group_2"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gAgeGroup3"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_group_3"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gAgeGroup4"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_group_4"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gAgeGroup5"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_group_5"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gAgeGroup6"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_group_6"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/toms_100"
                    app:rippleColor="@color/toms_500" />

            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/gFilterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/filter"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>