<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editAccountConLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.account.EditAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/editNameText"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_name"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/editBirthDateText"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_birth_date"
                android:textStyle="italic" />

            <Button
                android:id="@+id/editBirthDate"
                style="?android:spinnerStyle"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/birth_date"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHighlight="@color/toms_200"
                android:textColorLink="@color/toms_400" />

            <TextView
                android:id="@+id/editGenderText"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_gender"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/editGender"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:entries="@array/genders"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password_warning"
                android:textSize="12sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/editUserDataButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/edit_account_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>